--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "compression": "^1.6.2",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "morgan": "^1.8.1"
   },
