--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "lint": "eslint server/**.js; eslint public/**.js; true"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
     "morgan": "^1.8.1"
   },
   "devDependencies": {
+    "eslint": "^3.16.0",
+    "eslint-plugin-react": "^6.10.0",
     "nodemon": "^1.11.0"
   }
 }
