--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js",
+    "build": "webpack --progress --colors",
     "lint": "eslint server/**.js; eslint public/**.js; true"
   },
   "keywords": [],
@@ -17,11 +18,14 @@
     "compression": "^1.6.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "eslint": "^3.16.0",
     "eslint-plugin-react": "^6.10.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^2.2.1"
   }
 }
