--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js",
-    "build": "webpack --progress --colors",
+    "build": "webpack --progress --colors --config webpack.config.prod.js",
     "hot-reload": "webpack-dev-server",
     "lint": "eslint server/**.js; eslint public/**.js; true"
   },
