--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js",
-    "build": "webpack --progress --colors --config webpack.config.prod.js",
+    "dev": "nodemon server/server.js;",
     "hot-reload": "webpack-dev-server",
+    "prebuild": "rm public/dist/bundle.js",
+    "build": "webpack --progress --colors --config webpack.config.prod.js",
     "lint": "eslint server/**.js; eslint public/**.js; true"
   },
   "keywords": [],
