--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/server.js;",
-    "hot-reload": "webpack-dev-server",
+    "predev":"rm public/dist/bundle.js",
+    "dev": "webpack-dev-server",
     "prebuild": "rm public/dist/bundle.js",
     "build": "webpack --progress --colors --config webpack.config.prod.js",
     "lint": "eslint server/**.js; eslint public/**.js; true"
