--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.14.1",
     "morgan": "^1.8.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
