--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.16.1",
     "compression": "^1.6.2",
     "dotenv": "^4.0.0",
@@ -21,6 +22,7 @@
     "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
   "devDependencies": {
