--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^1.11.0",
     "postcss-loader": "^0.9.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-logger": "^2.8.2",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.0"
